Actualizar proyecto: modificar, eliminar y agregar archivos

--- a/AppBlazor.Client/wwwroot/index.html
+++ b/AppBlazor.Client/wwwroot/index.html
@@ -30,6 +30,8 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+
+    <sript src="js/inicio.js"></sript>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
 </body>
 
