--- a/AppBlazor.Client/wwwroot/index.html
+++ b/AppBlazor.Client/wwwroot/index.html
@@ -31,7 +31,7 @@
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
 
-    <sript src="js/inicio.js"></sript>
+    <script src="js/inicio.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
 </body>
 
